
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/dateTimeField"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.22"
                android:ems="10"
                android:inputType="none" />

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/calendar_description"
                android:src="@android:drawable/ic_menu_day" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/odometer_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/odometerField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.93"
                android:ems="10"
                android:inputType="number|numberDecimal" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/distanceUnitLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.19"
                android:text="@string/km_unit"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/volumeField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number|numberDecimal" />

            <TextView
                android:id="@+id/volumeUnitLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/litre_unit"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/priceField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number|numberDecimal" />

            <TextView
                android:id="@+id/currencyLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euroCurrency"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/partialFillUpRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="38dp"
                android:checked="false"
                android:text="@string/partial_fill_up" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/partialFillUpRadioButton"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="17dp"
                android:text="@string/attach_receipt"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageButton
                android:id="@+id/cameraButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/partialFillUpRadioButton"
                android:layout_marginRight="32dp"
                android:onClick="onClick"
                android:src="@android:drawable/ic_menu_camera" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="32dp"
                android:contentDescription="@string/cancelDescription"
                android:onClick="onClick"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />

            <ImageButton
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/cancelButton"
                android:contentDescription="@string/submit_description"
                android:onClick="onClick"
                android:src="@android:drawable/ic_menu_add" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/submitButton"
                android:text="@string/submit_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/cancelButton"
                android:layout_below="@+id/cancelButton"
                android:text="@string/cancel_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

    </LinearLayout>
